syntax = "proto3";
package CommonTypes;

option go_package = "./entrypoints/grpc_entrypoints/gen";

message PageInfoItem {
  int64 page_limit = 1;
  int64 page_size = 2;
  int64 page_number = 3;
  int64 total_items = 4;
}