syntax = "proto3";

import "common_types.proto";
import "optional_types.proto";
import "google/protobuf/empty.proto";
option go_package = "./entrypoints/grpc_entrypoints/gen";


service DictionariesGrpcService {
  rpc GetDictionaryList (DictionaryListRequest) returns (DictionaryListResponse) {}
  rpc CreateDictionaryItem (DictionaryCreateRequest) returns (DictionaryResponse) {}
  rpc DeleteDictionaryItem (DictionaryDeleteRequest) returns (google.protobuf.Empty) {}
  rpc UpdateDictionaryItem (DictionaryUpdateRequest) returns (DictionaryResponse) {}
}

enum DictionaryType {
  AREA = 0;
  TEAM = 1;
  CODE_LANG = 2;
}

message DictionaryCreateRequest {
  OptionalTypes.UUIDOptional   dictionary_uuid= 1;
  DictionaryType dict_type                    = 2;
  string title                                = 3;
  string color                                = 4;
  string description                          = 5;
}

message DictionaryUpdateRequest {
  OptionalTypes.UUIDOptional dictionary_uuid  = 1;
  DictionaryType dict_type                    = 2;
  string title                                = 3;
  string color                                = 4;
  string description                          = 5;
}
message DictionaryDeleteRequest {
  OptionalTypes.UUIDOptional dictionary_uuid   = 1;
}
message DictionaryListRequest {
  DictionaryType dict_type                    = 1;
}
message DictionaryResponse {
  OptionalTypes.UUIDOptional dictionary_uuid  = 1;
  DictionaryType dict_type                    = 2;
  string title                                = 3;
  string color                                = 4;
  string description                          = 5;
}
message DictionaryListResponse {
  repeated DictionaryResponse items = 1;
  CommonTypes.PageInfoItem page_info = 2;
}

